--- a/htaContent.html
+++ b/htaContent.html
@@ -420,7 +420,7 @@
 						{terms: ["Vegetarian", "Cucumber", "Tofu", "Fries", "King"], color: "#88B04B"},
 						{terms: ["Mala"], color: "#ea002a"},
 						{terms: ["Crispy"], color: "#955251"},
-						{terms: ["Sweet", "Tea", "Slush"], color: "Pink"}
+						{terms: ["Red Bean", "Tea", "Slush"], color: "Pink"}
 						]
 		for (var i = 0; i < searchTerms.length; i++){
 			for (var j=0; j < searchTerms[i].terms.length; j++){
