Update with New Menu Item

--- a/htaContent.html
+++ b/htaContent.html
@@ -732,7 +732,7 @@
 	
 	function changeBackgroundColor(item){
 		var searchTerms = [
-						{terms: ["Original", "Braised Pork", "Braised Lean Pork", "Braised Drum"], color: "#BC243C"},
+						{terms: ["Original", "Braised Pork", "Braised Lean Pork", "Braised Drum", "Braised Sea"], color: "#BC243C"},
 						{terms: ["Chicken"], color: "#ff7f7f"},
 						{terms: ["Crab", "Eel", "Fish", "Octopus", "Calamari"], color: "#34568B"},						
 						{terms: ["Vegetarian", "Cucumber", "Tofu", "Fries", "King"], color: "#88B04B"},
